# Nasscom-Hackathon

./: Embed.py  main.py  pyproject.toml
Agents/: RAGAgent.py  TicketingAgent.py
Data/: service_now_sample_dataset.csv
ServiceNow mock/: create_ticket_lambda.py  ticket_lookup_lambda.py
utils/: Routers.py  utility.py
